--- a/apps/react-webpack-app/public/index.html
+++ b/apps/react-webpack-app/public/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Vue App</title>
+    <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <vue-webpack-app></vue-webpack-app>
+    <react-webpack-app></react-webpack-app>
   </body>
 </html>
