--- a/apps/webpack-main/public/index.html
+++ b/apps/webpack-main/public/index.html
@@ -8,8 +8,10 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <react-app></react-app>
-    <vue-app></vue-app>
+    <div style="display: flex">
+      <react-app></react-app>
+      <vue-app></vue-app>
+    </div>
     <script src="/apps/vue_app/remoteEntry.js"></script>
     <script src="/apps/react_app/remoteEntry.js"></script>
   </body>
