feat: base setting

--- a/apps/webpack-main/public/index.html
+++ b/apps/webpack-main/public/index.html
@@ -4,15 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Main App</title>
-    <link rel="stylesheet" href="./tailwind.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div style="display: flex">
-      <react-app></react-app>
-      <vue-app></vue-app>
+      <div id="app">App</div>
     </div>
-    <script src="/apps/vue_app/remoteEntry.js"></script>
-    <script src="/apps/react_app/remoteEntry.js"></script>
   </body>
 </html>
