feat: base setting

--- a/apps/webpack-main-app/public/index.html
+++ b/apps/webpack-main-app/public/index.html
@@ -7,8 +7,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div style="display: flex">
-      <div id="app">App</div>
-    </div>
+    <div id="root"></div>
+    <div id="app"></div>
   </body>
 </html>
